deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: rosalindyang/spellingbee:newest
        ports:
        - containerPort: 8080
