service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
  labels:
    app: app
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    nodePort: 34000
  selector:
    app: app
